# cpputest_example_sysbios

script/: cpputest_template.py
unittest/: CMakeLists.txt  testRunner.cpp  test_clock.cpp
unittest/fake_sysbios/: CMakeLists.txt  fake_ti_bios.c  fake_ti_bios.h  fake_ti_knl_clock.c  fake_ti_knl_clock.h  fake_xdc_runtime_system.c  fake_xdc_runtime_system.h
